<?xml version="1.0"?>
<package format="2">
  <name>hovermap_api_msgs</name>
  <version>0.1.0</version>
  <description>ROS messages for the Hovermap ROS API</description>

  <maintainer email="glenn@emesent.io">Glenn</maintainer>

  <license>Proprietary</license>

  <author email="glenn@emesent.io">Glenn</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
